---------------------------------------------------------------------------

Version 2.7.0, March 1, 2019

The manual links to the AWS crypto policy compliance checker, which enforces
that no weak cipher algorithms are used with the Java crypto API.

In the @HasSubsequence annotation, the "value" element has been renamed to "subsequence".

Renamed AnnotatedTypeFactory.ParameterizedMethodType to the more
appropriate ParameterizedExecutableType.

---------------------------------------------------------------------------

Version 2.6.0, February 3, 2019

The manual includes a section about how to use Lombok and the Checker
Framework simultaneously.

Commons CSV has been added to the annotated libraries on Maven Central.

Some error messages have been changed to improve comprehensibility,
such as by adjusting wording or adding additional information.

Relevant to type system implementers:
Renamed method areSameIgnoringValues to areSameByName.

Closed issues: 2008, 2166, 2185, 2187, 2221, 2224, 2229, 2234, 2248.
Also fixed false negatives in handling of Map.get().

---------------------------------------------------------------------------

Version 2.5.8, December 5, 2018

The manual now links to the AWS KMS compliance checker, which enforces
that calls to AWS KMS only generate 256-bit keys.

Closed issues: 372, 1678, 2207, 2212, 2217.

---------------------------------------------------------------------------

Version 2.5.7, November 4, 2018

New @EnsuresKeyFor and @EnsuresKeyForIf method annotations permit
specifying the postcondition that a method gives some value a @KeyFor type.

The manual links to the Rx Thread & Effect Checker, which enforces
UI Thread safety properties for stream-based Android applications.

Closed issues:
1014, 2151, 2178, 2180, 2183, 2188, 2190, 2195, 2196, 2198, 2199

---------------------------------------------------------------------------

Version 2.5.6, October 3, 2018
