@@ -5,7 +5,11 @@ Version 2.7.0, March 1, 2019
 The manual links to the AWS crypto policy compliance checker, which enforces
 that no weak cipher algorithms are used with the Java crypto API.
 
-In the @HasSubsequence annotation, the "value" element has been renamed to "subsequence".
+The Nullness Checker supports RxJava annotations
+io.reactivex.annotations.NonNull and io.reactivex.annotations.Nullable.
+
+In the @HasSubsequence annotation, the "value" element has been renamed to
+"subsequence".
 
 Renamed AnnotatedTypeFactory.ParameterizedMethodType to the more
 appropriate ParameterizedExecutableType.
